# AI-Agent-Orchestration-System-Backend

./: .dockerignore  .env.samples  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
DataBase Backups/: Ai Agent Orchestration.backup  Ai Agent Orchestration.sql
src/backend/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
src/backend/agents/: __init__.py  base_agent.py  entity_extractor.py  orchestrator.py  sentiment.py  summarizer.py
src/backend/api/: __init__.py  dependencies.py  routes.py  webhooks.py
src/backend/services/: __init__.py  processing_service.py  webhook_service.py
src/backend/utils/: __init__.py  background_tasks.py  exceptions.py  logger.py
